Center patreon stats Now that <p> no longer uses lead class, the patreon stats needed to be aligned properly to compensate for smaller height container

--- a/content/public/css/main.css
+++ b/content/public/css/main.css
@@ -620,6 +620,7 @@ a[href^='https']:not([href*='monogame.net']):not(.btn)::after {
     flex-direction: column;
     gap: 20px;
     text-align: end;
+    justify-content: center;
 }
 
 .patreon-stats .patreon-stat {
